const mongoose = require('mongoose')
const autopopulate = require('mongoose-autopopulate')

const photoSchema = new mongoose.Schema({
  filename: String,
  likedBy: [
    {
      type: mongoose.Schema.Types.ObjectId,
      ref: 'User',
      autopopulate: true,
    },
  ],
})

photoSchema.plugin(autopopulate)
module.exports = mongoose.model('Photo', photoSchema)

/* class Product {
  constructor(name, price) {
    this.name = name
    this.price = price
    this.likedBy = []
    this.reviews = []
  }

  get detail() {
    return `
      Product: ${this.name} , ${this.price}
      Liked by: ${this.likedBy}
      Reviewed by: ${this.reviewedBy}
      `
  }
}

module.exports = Product */
